@@ -8,6 +8,8 @@ o) Improved logging of configuration file issues
 o) ircd.pid has been accidentally saved in /var instead of /var/run
 o) Linux RT signal support for notification of socket events has been dropped
 o) Fixed "STATS Y|y" sometimes sending weird sendq/recvq values
+o) INFO now also shows configured values of 'disable_fake_channels',
+   and 'stats_e_disabled'
 
 
 -- ircd-hybrid-8.0.4 Release Notes
